--- a/website-frontend/index.html
+++ b/website-frontend/index.html
@@ -427,7 +427,9 @@
             <figure style="float: left; width: 15%; padding: 8px;" class="paragraph-main"><img src="media/Kameliya.jpg" style="width:100%"><figcaption>Kameliya Staneva</figcaption></figure>
             <figure style="float: left; width: 15%; padding: 8px;" class="paragraph-main"><img src="media/Haofu.jpg" style="width:100%"><figcaption>Haofu Wang</figcaption></figure>
             <figure style="float: left; width: 15%; padding: 8px;" class="paragraph-main"><img src="media/Shuyi.jpg" style="width:100%"><figcaption>Shuyi Zheng</figcaption></figure>
-
+             <p class="paragraph-main">
+                For code and data behind this website click <a href=https://github.com/agelanyi/climate-and-uk-wine> <b>here</b></a> to visit the Github repository. 
+          </p>
         </div>
 
       </div>
