--- a/website-frontend/index.html
+++ b/website-frontend/index.html
@@ -158,7 +158,7 @@
       <div class="fullpage-graphics">
         <iframe frameborder="0" class="map"
           src="../02-Global-Viticultural-Climate-Zones/02-Global-Viticultural-Climate-Zones.html"></iframe>
-        <p class="paragraph-description">Map visulisaing changes in climate from 1990 - 2017. Data from: Willmott, C and Matsuura, K. 2017. Terrestrial Air Temperature and Precipitation: Monthly and Annual Time Series (1950 - 1999). <em> NOAA Physical Sciences Laboratory. University of Delaware</em> [Online]. [Accessed 1 May 2022]. Available from: <a href= "https://psl.noaa.gov/data/gridded/data.UDel_AirT_Precip.html">https://psl.noaa.gov/data/gridded/data.UDel_AirT_Precip.html</a> </p>
+        <p class="paragraph-description">Map visualising changes in climate from 1900 - 2017. Data from: Willmott, C and Matsuura, K. 2017. Terrestrial Air Temperature and Precipitation: Monthly and Annual Time Series (1950 - 1999). <em> NOAA Physical Sciences Laboratory. University of Delaware</em> [Online]. [Accessed 1 May 2022]. Available from: <a href= "https://psl.noaa.gov/data/gridded/data.UDel_AirT_Precip.html">https://psl.noaa.gov/data/gridded/data.UDel_AirT_Precip.html</a> </p>
 
       </div>
     </section>
