Changing the Final Remarks page

--- a/website-frontend/index.html
+++ b/website-frontend/index.html
@@ -398,11 +398,10 @@
 
     <!-- ELEVENTH PAGE -->
 
-    <section class="vertical-scrolling">
+    <section class="vertical-scrolling background-conclusion">
       <div class="section-container">
         <div class="section-text">
-          <h2>Conclusion</h2>
-          <h3>Final remarks</h3>
+          <h2>Final Remarks</h2>
           <p class="paragraph-main">
             Throughout this narrative, we have explored the UK's burgeoning
             viticulture. From what is being produced, to how and why it is
