--- a/06-UK-Vineyard-Locations/06-UK-Vineyard-Locations.html
+++ b/06-UK-Vineyard-Locations/06-UK-Vineyard-Locations.html
@@ -156,11 +156,11 @@
       <h1>The Vineyards of the UK</h1>
       <p>Currently, there are 860 Vineyards and wineries throughout the UK.</p>
       <p>These maps explore the distribution of viticulture in the UK. You can look at them by country by changing the
-        toggle. To discover details about each vineyard, click on the circle to show the name, country, country, and
-        website for that Vineyard. If the website is not available, click the google search option. </p>
-      <p>The heatmap examines the distribution of Vineyards, weighted by their size in hectares. </p>
-      <p>From these maps, it is clear that Vineyards are now present across the UK. Notably, there is a dense concentration within
-        the South-East region. Co-currently, the density of Vineyards decreases in a northerly direction. Considering
+        toggle. To discover details about each vineyard, click on the circle to show the name, county, country, and
+        website for that vineyard. If the website is not available, click the google search option. </p>
+      <p>The heatmap examines the distribution of vineyards, weighted by their size in hectares. </p>
+      <p>From these maps, it is clear that vineyards are now present across the UK. Notably, there is a dense concentration within
+        the South-East region. Co-currently, the density of vineyards decreases in a northerly direction. Considering
         the change in climate, this trend corroborates the northerly annual increases in temperature. Continue below
         to uncover more detail about this change in the climate.</p>
 
