--- a/website-frontend/index.html
+++ b/website-frontend/index.html
@@ -350,10 +350,10 @@
             Finally, the bedrock beneath provides
             minerals and physical support for vineyards. <br><br> 
             But how do these
-            requirements translate to a single vineyard? The <a href= "https://rathfinnyestate.com/about/vineyard/">Rathfinny Wine Estate</a> was established in 2010, and specialises in producing Pinot Noir,
+            requirements translate to a single vineyard? The <a href= "https://rathfinnyestate.com/about/vineyard/"><b>Rathfinny Wine Estate</b></a> was established in 2010, and specialises in producing Pinot Noir,
             Chardonnay and Pinot Meunie, spanning 350 acres. Through
             extracting satellite data, all soil moisture levels fell below 50%. Moreover, most of the soil PH 
-            lies within the 6.6-6.7 range. This is ideal for the grapes grown in the estate. To explore more, visit <a href= "https://agelanyi.github.io/climate-and-uk-wine/09-UK-Vineyard-Case-Study/09-UK-Soil-Moisture-PH.html">here.</a><br><br>
+            lies within the 6.6-6.7 range. This is ideal for the grapes grown in the estate. To explore more, click <a href= "https://agelanyi.github.io/climate-and-uk-wine/09-UK-Vineyard-Case-Study/09-UK-Soil-Moisture-PH.html"><b>here</b>.</a><br><br>
             When exploring the geology of Rathfinny, its south-facing slopes lie on the same
             chalk as the Paris Basin. Chalk provides a
             soft, yet cooling and porous alkaline bedrock, ideal for grapes
@@ -385,7 +385,7 @@
             shown, upon the 10th of October 2017, displays both the smoke from
             the event, but, more importantly, the damage. With the
             Near-Infrared Image on the right, areas that appear black have
-            burned, and plants have been scorched. his is not an isolated incident, nor is it
+            burned, and plants have been scorched. This is not an isolated incident, nor is it
             temporally restricted; within the previous decade, 50% of the land in Napa Valley have burned. Such events are increasing in frequency, alongside
             other natural events.<br><br> Globally, climate change is altering
             patterns of production and consumption. Whilst the expanding
