--- a/09-UK-Vineyard-Case-Study/09-UK-Vineyard-Case-Study.html
+++ b/09-UK-Vineyard-Case-Study/09-UK-Vineyard-Case-Study.html
@@ -292,7 +292,7 @@
   <div id="console">
     <div class="session"></div>
     <button id="fly">
-      <h1><b>Fly to the Vineyard</b></h1>
+      <h1><b>Click to visit Rathfinny Vineyard</b></h1>
     </button>
     <h2>Look Beneath the Grapes</h2>
     <div class="row" id="filters">
