--- a/website-frontend/index.html
+++ b/website-frontend/index.html
@@ -351,7 +351,7 @@
             minerals and physical support for vineyards. <br><br> 
             But how do these
             requirements translate to a single vineyard? The <a href= "https://rathfinnyestate.com/about/vineyard/"><b>Rathfinny Wine Estate</b></a> was established in 2010, and specialises in producing Pinot Noir,
-            Chardonnay and Pinot Meunie, spanning 350 acres. Through
+            Chardonnay and Pinot Meunie, spanning 350 acres. Use the button on the map to explore the vineyard. Through
             extracting satellite data, all soil moisture levels fell below 50%. Moreover, most of the soil PH 
             lies within the 6.6-6.7 range. This is ideal for the grapes grown in the estate. To explore more, click <a href= "https://agelanyi.github.io/climate-and-uk-wine/09-UK-Vineyard-Case-Study/09-UK-Soil-Moisture-PH.html"><b>here</b>.</a><br><br>
             When exploring the geology of Rathfinny, its south-facing slopes lie on the same
