--- a/website-frontend/index.html
+++ b/website-frontend/index.html
@@ -317,8 +317,8 @@
             the success of viticulture. Yet, in actuality,
             grapes thrive in dryer climates, such as those found within
             the traditional regions of viticulture in Southern Europe. This is because too much water can cause the vines to swell, and even burst.<br><br>
-            Ultimately, what delaminates a successful vineyard, and also
-            the taste of the grapes, lies beneath the surface.
+            Other environmental factors that can delaminate a successful vineyard, and 
+            the taste of the grapes, lie beneath the surface.
           </p>
         </div>
       </div>
