--- a/website-frontend/index.html
+++ b/website-frontend/index.html
@@ -180,13 +180,14 @@
           <!-- <h3>Subheading</h3> -->
           <p class="paragraph-main">
             Summers are getting warmer, winters are sometimes harsher, leading
-            to more extreme conditions. The annual average temperature of the
+            to more extreme conditions. <br><br>The annual average temperature of the
             United Kingdom is increasing. Based on data from the Met Office,
             we can see that over that last 30 years, almost every year brought
             a higher-than-average warmth. While the change of climate is a
             threat to most of us, grapevine prefers this weather and can adapt
-            to the new UK ranges. Annually, rainfall has not changed
-            significantly over the same period of time
+            to the new UK ranges.<br><br> Annually, rainfall has not changed
+            significantly over the same period of time, but conditions, like the 
+            number of days with rain, can have an impact on harvests.
           </p>
         </div>
       </div>
