--- a/website-frontend/index.html
+++ b/website-frontend/index.html
@@ -185,7 +185,7 @@
             we can see that over that last 30 years, almost every year brought
             a higher-than-average warmth. While the change of climate is a
             threat to most of us, grapevine prefers this weather and can adapt
-            to the new UK ranges.<br><br> Annually, rainfall has not changed
+            to the new UK ranges. Annually, rainfall has not changed
             significantly over the same period of time, but conditions, like the 
             number of days with rain, can have an impact on harvests.
           </p>
