Adding Google Analytics tags for website metrics

--- a/index.html
+++ b/index.html
@@ -1,6 +1,17 @@
 <!DOCTYPE html>
 <html>
   <head>
+    
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-Y78Y2V3XKM"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-Y78Y2V3XKM');
+    </script>
+
     <meta charset="UTF-8">
     <meta http-equiv="refresh" content="0; url='website-frontend/index.html'" />
     <script type="text/javascript">
