--- a/website-frontend/index.html
+++ b/website-frontend/index.html
@@ -2,6 +2,17 @@
 <html lang="en">
 
 <head>
+
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-Y78Y2V3XKM"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-Y78Y2V3XKM');
+  </script>
+
   <meta charset="UTF-8" />
 
   <title>A Change in Climate, A Change in Taste</title>
